# oml-mailbox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish_crate.yml
src/: lib.rs  mailbox.rs  mailbox_disk.rs  mailbox_item.rs
