[package]
name = "oml-mailbox"
version = "0.1.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A very simple mailbox system with multiple backend storages."
readme = "README.md"
homepage = "https://github.com/AndreasOM/oml-mailbox"
repository = "https://github.com/AndreasOM/oml-mailbox"
keywords = ["database", "storage", "backend"]
categories = ["database"]

exclude = [
    ".github",
    ".gitignore",
]

[dependencies]
async-trait = "0.1.77"
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
color-eyre = "0.6.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
test-log = { version = "0.2.15", features = ["tracing-subscriber", "trace"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
